# snap-coin-stats

./: .gitignore  Cargo.toml
src/: api.rs  db.rs  main.rs
static/: stats.css  stats.html  stats.js
