# =============================================================================
# Cargo.toml
# snap-coin-stats/Cargo.toml
# v0.1.0
# Public-facing SNAP chain stats server.
# Reads from an rsync snapshot of the live sled DB.
# =============================================================================

[package]
name = "snap-coin-stats"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow       = "1.0"
axum         = { version = "0.8", features = [] }
bincode      = "2"
serde        = { version = "1.0", features = ["derive"] }
serde_json   = "1.0"
sled         = "0.34.7"
snap-coin    = "15.2.0"
tokio        = { version = "1", features = ["full"] }
tower-http   = { version = "0.5", features = ["fs"] }

# =============================================================================
# Cargo.toml
# snap-coin-stats/Cargo.toml
# Created: 2026-03-21T00:00:00Z
# =============================================================================
